--- a/css/index.css
+++ b/css/index.css
@@ -144,6 +144,7 @@ nav {
 .s2 {
     display:flex;
     flex-direction:column;
+    width: 31.25%;
     max-width: 225px;
     justify-content: space-between;
 }
@@ -233,8 +234,7 @@ p {
 @media (max-width:800px) {
 
     .Main {
-        max-width:100%;
-        width: 800px;
+        width:100%;
     }
 
     .Main2 {
@@ -242,12 +242,10 @@ p {
         flex-direction:column;
         align-items: center;
         width: 100%;
-        max-width: 800px;
     }
 
     .Sec1 {
         width: 90.00%;
-        max-width: 720px;
     }
 
     .Sec1 img {
@@ -256,7 +254,6 @@ p {
 
     header {
         width: 90%;
-        max-width:720px;
         flex-direction: column;
         height: 100px;
         justify-content: space-around;
@@ -265,7 +262,6 @@ p {
 
     nav {
         width:100%;
-        max-width: 720px;
         order:1;
     }
     
@@ -277,19 +273,15 @@ p {
     .Sec2 {
         padding:0px 0px;
         width: 100%;
-        max-width: 800px;
-
     }
 
     .Sec2 img {
         width: 100%;
-        max-width: 800px;
         margin: 30px 0px;
     }
 
     .Sec2s1 {
         width: 90.00%;
-        max-width: 720px;
         display:flex;
         height:250px;
         align-items: flex-start;
@@ -301,7 +293,6 @@ p {
     .Sec2s2 {
         width: 90.00%;
         height: 480px;
-        max-width: 720px;
         display:flex;
         justify-content: space-between;
         align-items: flex-start;
@@ -310,19 +301,16 @@ p {
     .s1 p {
     font-size: 1.9rem;
     width: 100.00%;
-    max-width: 325px;
 }
 
 .s2 p {
     font-size: 1.9rem;
     width: 100%;
-    max-width: 190px;
 }
 
     .s1 {
     display:flex;
     width: 45.14%;
-    max-width: 325px;
     flex-direction:column;
     height: 180px;
     align-items: space-between;
@@ -332,7 +320,6 @@ p {
     .s2 {
         display:flex;
         width: 26.39%;
-        max-width: 190px;
         flex-direction:column;
         height: 250px;
         align-items: space-between;
@@ -341,7 +328,6 @@ p {
     
         footer {
             width: 90.00%;
-            max-width: 720px;
         }
 }
 
@@ -352,7 +338,6 @@ p {
 
     .Main {
         width: 100%;
-        max-width: 500px;
     }
 
     .Main2 {
@@ -360,7 +345,6 @@ p {
         flex-direction:column;
         align-items: center;
         width: 100%;
-        max-width: 500px;
     }
 
     .Sec1 {
@@ -368,7 +352,6 @@ p {
         align-items: center;
         margin-top: 140px;
         width: 84%;
-        max-width: 420px;
         height: 300px;
     }
 
@@ -377,7 +360,6 @@ p {
         flex-direction: column;
         height: 500px;
         width: 100%;
-        max-width: 500px;
         justify-content: space-around;
         align-items: center;
     }
@@ -386,7 +368,6 @@ p {
         text-align: center;
         flex-direction: column;
         width: 100%;
-        max-width: 500px;
         order:1;
     }
 
@@ -420,7 +401,6 @@ p {
         justify-content: space-around;
         flex-direction:column;
         width: 100%;
-        max-width: 420px;
         height: 300px;
     }
 
@@ -432,21 +412,19 @@ p {
     }
 
     .Sec2 {
+        
         width: 100%;
-        max-width: 500px;
-        padding: 20px 0px 60px 0px;
+        padding: 20px 0px 70px 0px;
     }
 
     .Sec2 img {
         width: 100%;
-        max-width: 500px;
         margin: 10px 0px 40px 0px;
        }
 
     .Sec2s1 {
 
         width: 84%;
-        max-width: 420px;
         display:flex;
         flex-direction:column;
         height:375px;
@@ -455,9 +433,8 @@ p {
 
     
     .Sec2s2 {
-        height: 525px;
+        height: 540px;
         width: 84%;
-        max-width: 420px;
         display:flex;
         flex-direction:column;
         justify-content: space-between;
@@ -468,7 +445,6 @@ p {
     font-size: 14pt;
     width: 100%;
     height: 125px;
-    max-width: 400px;
     padding-bottom: 100px;
 
 
@@ -476,16 +452,15 @@ p {
 
 .s2 p {
     font-size: 1.9rem;
-    width: 100%;
     max-width: 400px;
+    width: 100%;
     margin-bottom: 40px;
 
 }
 
     .s1 {
     display:flex;
-    width: 100%;
-    max-width: 400px;
+    width: 95.240%;
     flex-direction:column;
     height: 120px;
     align-items: space-between;
@@ -496,7 +471,7 @@ p {
     .s2 {
         display:flex;
         width: 100%;
-        max-width: 400px;
+        max-width:400px;;
         flex-direction:column;
         height: 135px;
         align-items: space-between;
@@ -504,10 +479,10 @@ p {
         }
     
         h2 {
+    w       width: 95.240%;
             font-size: 2.7rem;
         }
         
         footer {
             width: 84%;
-            max-width: 420px;        }
     }
